sumbitted update resume page

--- a/resume.html
+++ b/resume.html
@@ -84,21 +84,41 @@
 
     <section class="container-fluid">
       <div class="row">
-        <div class="col-md-4 bg-color-personal-info section-column">
+        <div class="col-md-4 bg-color-work-history section-column">
           <div class="row">
             <div class="col-12">
-              <h3 class="section-heading uppercase">Work History</h3>
+              <h3 class="history-heading uppercase">Work History</h3>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="col-md-8 bg-color-three-reasons">
-        <div class="row">
-          <div class="col">
-            <h3 class="section-heading uppercase">
-              My Skills
-            </h3>
+          <div class="history-items">
+          <div class="timeline-item" data-dates="02/1998 - 04/2004">
+            <h4>National College of Art and Design (NCAD)</h4>
+            <p>Sculptor in residence</p>
           </div>
+           <div class="timeline-item" data-dates="04/2004 - 06/2008">
+          <h4>Fisher and Diaz Funeral Directors</h4>
+          <p>Junior Embalmer</p>
+        </div>
+        <div class="timeline-item" data-dates="02/1998 - 04/2004">
+          <h4>Phantom Desing Inc. Dublin</h4>
+          <p>Junior Front End Developer</p>
+        </div>
+           <div class="timeline-item" data-dates="06/2011 - Present">
+          <h4>Hooli Inc. Silicon Valey</h4>
+          <p>Full Stack Web Developer</p>
+        </div>
+
+        </div>
+
+        </div>
+       
+        <div class="col-md-8 bg-color-three-reasons">
+          <div class="row">
+            <div class="col">
+              <h3 class="section-heading uppercase">
+                My Skills
+              </h3>
+            </div>
           </div>
           <div class="row">
             <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
@@ -111,8 +131,9 @@
                     Front End
                   </h4>
                   <p>
-                    I'm a skilled in UX using the trinity of HTML/CSS/Javascript.
-                    I also have extensive experience in Front End Frameworks such as Angular and React.
+                    I'm a skilled in UX using the trinity of
+                    HTML/CSS/Javascript. I also have extensive experience in
+                    Front End Frameworks such as Angular and React.
                   </p>
                 </div>
               </div>
@@ -130,8 +151,10 @@
                     Back End
                   </h4>
                   <p>
-                  I specialize in data-driven web applications. Many of my projects utilise document-based data.
-                  I use Python and Django in conjunction with MongoDB to process and present information.
+                    I specialize in data-driven web applications. Many of my
+                    projects utilise document-based data. I use Python and
+                    Django in conjunction with MongoDB to process and present
+                    information.
                   </p>
                 </div>
               </div>
@@ -152,7 +175,7 @@
                 </div>
                 <span class="progress-type">HTML / HTML5</span>
               </div>
-               <div class="progress">
+              <div class="progress">
                 <div
                   class="progress-bar bg-success"
                   role="progressbar"
@@ -207,6 +230,7 @@
             </div>
           </div>
         </div>
+      </div>
     </section>
 
     <footer class="container-fluid">
