--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <header>
       <div class="row no-gutters">
-        <a href=" index.html" class="col-md-4 logo"> </a>
+        <a href="index.html" class="col-md-4 logo"> </a>
         <div class="col-md-8">
           <div class="row bg-color-name-title no-gutters">
             <div class="col heading">
@@ -62,7 +62,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom"
+                  <a href="../contact.html" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-comment-o" aria-hidden="true"></i
                     ><span>Contact</span></a
                   >
@@ -70,7 +70,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-sweep-to-bottom"
+                  <a href="../assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"
                     ><i class="fa fa-download" aria-hidden="true"></i
                     ><span>Download</span></a
                   >
@@ -220,7 +220,7 @@
           <h5 class="uppercase general-sub">Download</h5>
           <p class="inline-block">
             Need a printabel version of my CV? Download it here.
-            <a href="#" target="_blank" class="cv-pdf">
+            <a href="../assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
               <i class="fa fa-download" aria-hidden="true"></i>
               <span class="sr-only">Downlaod link.</span>
             </a>
